video13. Spring Boot. Deploy to server. 100%

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=/home/serhio/.dev/uploads
+upload.path=/home/serhio/IdeaProjects/sweater/uploads
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
@@ -17,11 +17,11 @@ spring.mail.password=B18IPni8FP6H8vac
 spring.mail.port=465
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.starttls.enable=true
-mail.debug=false
+mail.debug=true
 
 recaptcha.secret=6LdJxO0dAAAAAHiOxvbw-gIRDVeeToEB0e3AG4wK
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
-hostname=192.168.0.105
+hostname=localhost:8080
